# uv-cookiecutter

./: .pre-commit-config.yaml  AGENTS.md  README.md  cookiecutter.json  notes.md  prek.toml  pyproject.toml
.claude/skills/cleanup-code/: SKILL.md
.claude/skills/write-code/: SKILL.md
.claude/skills/write-docstrings/: SKILL.md
.claude/skills/write-tests/: SKILL.md
.github/workflows/: test.yml
hooks/: __init__.py  post_gen_project.py  pre_gen_project.py  test_post_gen_project.py
{{cookiecutter.package_name}}/: .pre-commit-config.yaml  README.md  prek.toml  pyproject.toml
{{cookiecutter.package_name}}/.github/workflows/: publish.yml  test.yml
{{cookiecutter.package_name}}/data/: AGENTS_README.md
{{cookiecutter.package_name}}/data/.claude/: settings.local.json
{{cookiecutter.package_name}}/data/.claude/skills/write-docstrings/: SKILL.md
