[project]
name = "uv_cookiecutter"
description = "Cookiecutter for setting up python projects with uv that just work"
license = {file = "LICENSE"}
version = "0.0.1"
readme = "README.md"
keywords = ["cookiecutter", "uv"]
authors = [{name = "Jonathon Vandezande"}]
requires-python = ">=3.13"
dependencies = [
    "cookiecutter>=2.6"
]

[dependency-groups]
dev = [
    "prek>=0.3.6",
    "pytest>=9",
    "pytest-cov>=7",
    "ruff>=0.15",
    "ty>=0.0.23",
]

[tool.ruff]
extend-exclude = ["\\{\\{cookiecutter.package_name\\}\\}"]
line-length = 100

[tool.ruff.lint]
select = [
    "B",  # bugbear
    "D",  # pydocstyle
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "N",  # pep8-naming conventions
    "W",  # pycodestyle warnings
    "C4", # comprehensions
    "PL", # pylint
    "PT", # flake8-pytest-style
    "PIE", # misc lints
    "PYI", # flake8-pyi
    "TID", # tidy imports
    "TCH", # type-checking imports
    "RUF", # Ruff-specific rules
    "RSE", # flake8-raise
    "ICN001", # unconventional-import-alias
]
ignore = [
    "RUF001",  # Ambiguous unicode character in string
    "RUF002",  # Ambiguous unicode character in docstring
    "N806", # Non-lowercase variable in function
    "PLR0911", # Too many returns
    "PLR0912", # Too many branches
    "PLR0913", # Too many arguments to function call
    "PLR0914", # Too many locals
    "PLR0915", # Too many statements
    "PLR1702", # Too many nested-blocks
    "PT013",   # Incorrect import of pytest
    "PLR2004", # Magic value used in comparison
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
testpaths = ["hooks"]
addopts = "--doctest-modules"
doctest_optionflags = "NORMALIZE_WHITESPACE"
