[project]
name = "{{cookiecutter.package_name}}"
description = "{{cookiecutter.project_name}}"
{%- if cookiecutter.license != 'None' %}
license = "{{cookiecutter.license}}"
{%- endif %}
version = "0.0.1"
readme = "README.md"
keywords = []
authors = [{name = "{{cookiecutter.author_name}}"}]
requires-python = ">={python_version}"
dependencies = [
    {dependencies}
]

[dependency-groups]
dev = [
    "pre-commit>=4.3",
    "pytest>=8.4",
    "pytest-cov>=7.0",
    "ruff>=0.14",
    "ty>=0.0.1a25",
    {dev_dependencies}
]

[tool.ruff]
line-length = {{cookiecutter.line_length}}

[tool.ruff.lint]
select = [
    "B",  # bugbear
    "D",  # pydocstyle
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "N",  # pep8-naming conventions
    "W",  # pycodestyle warnings
    "C4", # comprehensions
    "PL", # pylint
    "PT", # flake8-pytest-style
    "PIE", # misc lints
    "PYI", # flake8-pyi
    "TID", # tidy imports
    "TCH", # type-checking imports
    "RUF", # Ruff-specific rules
    "RSE", # flake8-raise
    "ICN001", # unconventional-import-alias
]
ignore = [
    "N806", # Non-lowercase variable in function
    "PLR0911", # Too many returns
    "PLR0912", # Too many branches
    "PLR0913", # Too many arguments to function call
    "PLR0914", # Too many locals
    "PLR0915", # Too many statements
    "PLR1702", # Too many nested-blocks
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.pytest.ini_options]
testpaths = ["tests", "{{cookiecutter.package_name}}"]
addopts = "--doctest-modules"
doctest_optionflags = "NORMALIZE_WHITESPACE"
